--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>新零售商城</title>
     <link rel="stylesheet" href="./static/css/reset.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1263728_5rctej6v6gl.css">
   </head>
   <body>
     <div id="app"></div>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
