--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>health-shop</title>
+    <title>新零售商城</title>
+    <link rel="stylesheet" href="./static/css/reset.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1263728_axtjylpj4iu.css">
   </head>
   <body>
     <div id="app"></div>
